--- a/main.html
+++ b/main.html
@@ -8,6 +8,40 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<div>
+		<label for="Name">Name</label>
+		<input id="name" name="Name" type="text" placeholder="Name">
+		</div>
+		<div>
+		<label for="pno">Phone Number</label>
+		<input id="phone" name="pno" type="text" placeholder="Phone Number">
+		</div>
+		<div>
+		<label for="address">Address</label>
+		<input id="address" name="address" type="text" placeholder="Address">
+		</div>
+		<div>
+		<label for="Ques">Have you ever lived with a Dog before?</label>
+		<input id="checkbox" name="Ques" type="checkbox" value="Have you ever lived with a Dog before?">
+		</div>
+		<div>
+		<label for="select">Please select your preferred breeds</label>
+		<select id="multiSelect" name="select" multiple>
+			<option value="german_Shepherd">german Shepherd</option>
+			<option value="Beagul">Beagul</option>
+			<option value="dalmation">dalmation</option>
+		</select>
+		</div>
+		<div>
+		<label for="Submit">Submit</label>
+		<input id="submit" name="Submit" type="submit" value="Submit">
+		</div>
+		
+	</form>
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
